--- a/requirements.txt
+++ b/requirements.txt
@@ -6,21 +6,19 @@ appdirs==1.4.4
 argon2-cffi==20.1.0
 asgiref==3.3.1
 astor==0.8.1
-astropy==4.2
 astunparse==1.6.3
 async-generator==1.10
 atari-py==0.2.6
 atomicwrites==1.4.0
 attrs==20.3.0
 audioread==2.1.9
-autograd==1.3
+autograd==1.3.0
 Babel==2.9.0
 backcall==0.2.0
 beautifulsoup4==4.6.3
 bleach==3.3.0
 blis==0.4.1
 bokeh==2.1.1
-Bottleneck==1.3.2
 branca==0.4.2
 bs4==0.0.1
 CacheControl==0.12.6
@@ -44,7 +42,6 @@ crcmod==1.7
 cufflinks==0.17.3
 cupy-cuda101==7.4.0
 cvxopt==1.2.6
-cvxpy==1.0.31
 cycler==0.10.0
 cymem==2.0.5
 Cython==0.29.22
@@ -67,7 +64,6 @@ earthengine-api==0.1.238
 easydict==1.9
 ecos==2.0.7.post1
 editdistance==0.5.3
-en-core-web-sm==2.2.5
 entrypoints==0.3
 ephem==3.7.7.1
 et-xmlfile==1.0.1
@@ -87,7 +83,6 @@ flatbuffers==1.12
 folium==0.8.3
 future==0.16.0
 gast==0.3.3
-GDAL==2.2.2
 gdown==3.6.4
 gensim==3.6.0
 geographiclib==1.50
@@ -151,7 +146,6 @@ ipython-sql==0.3.9
 ipywidgets==7.6.3
 itsdangerous==1.1.0
 jax==0.2.9
-jaxlib==0.1.60+cuda101
 jdcal==1.4.1
 jedi==0.18.0
 jieba==0.42.1
@@ -207,7 +201,6 @@ nibabel==3.0.2
 nltk==3.2.5
 notebook==5.3.1
 np-utils==0.5.12.1
-numba==0.51.2
 numexpr==2.7.2
 numpy==1.19.5
 nvidia-ml-py3==7.352.0
@@ -253,10 +246,8 @@ psutil==5.4.8
 psycopg2==2.7.6.1
 ptyprocess==0.7.0
 py==1.10.0
-pyarrow==3.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycocotools==2.0.2
 pycparser==2.20
 pyct==0.4.8
 pydata-google-auth==1.1.0
@@ -264,11 +255,9 @@ pydot==1.3.0
 pydot-ng==2.0.0
 pydotplus==2.0.2
 PyDrive==1.3.1
-pyemd==0.5.1
 pyerfa==1.7.2
 pyglet==1.5.0
 Pygments==2.6.1
-pygobject==3.26.1
 pymc3==3.7
 PyMeeus==0.4.2
 pymongo==3.11.3
@@ -277,7 +266,6 @@ pynndescent==0.5.2
 PyOpenGL==3.1.5
 pyparsing==2.4.7
 pyrsistent==0.17.3
-pysndfile==1.3.8
 PySocks==1.7.1
 pystan==2.19.1.1
 pytest==3.6.4
@@ -300,13 +288,10 @@ requests==2.23.0
 requests-oauthlib==1.3.0
 resampy==0.2.2
 retrying==1.3.3
-rpy2==3.4.2
 rsa==4.7.2
 scikit-image==0.16.2
 scikit-learn==0.22.2.post1
 scipy==1.4.1
-screen-resolution-extra==0.0.0
-scs==2.1.2
 seaborn==0.11.1
 Send2Trash==1.5.0
 setuptools-git==1.2
@@ -324,8 +309,7 @@ Sphinx==1.8.5
 sphinxcontrib-serializinghtml==1.1.4
 sphinxcontrib-websupport==1.2.4
 SQLAlchemy==1.3.23
-sqlparse==0.4.1
-srsly==1.0.5
+sqlparse==0.4.
 statsmodels==0.10.2
 sympy==1.7.1
 tables==3.4.4
@@ -333,13 +317,6 @@ tabulate==0.8.9
 tblib==1.7.0
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-datasets==4.0.1
-tensorflow-estimator==2.4.0
-tensorflow-gcs-config==2.4.0
-tensorflow-hub==0.11.0
-tensorflow-metadata==0.28.0
-tensorflow-probability==0.12.1
 termcolor==1.1.0
 terminado==0.9.2
 testpath==0.4.4
